webapi: remove api key management
